@@ -359,3 +359,6 @@ blockcheck: do not require root if SKIP_PKTWS=1
 v68:
 
 readme.md : move russian version to markdown
+nfqws,tpws: use alternate $ sign for $<config_file>
+repo: binaries removed from repo. git actions binaries build in releases.
+uninstall_easy.sh: offer to remove dependencies in openwrt
